    - Existing settings are now overridden by settings in supplementary/theme config files
    - Settings in supplementary/theme config files were previously added to existing ones
  * A new flag, `none`, was added
    - Allows reseting the token in supplementary/theme config files
    - Takes priority over all other settings whenever present
- Amends `Ventoy` Handling
  * `Whole Disk` volumes with `Legacy Bootcode` were previously hidden whenever `Ventoy` was present
    - This was to avoid spurious/unbootable instances appearing
      * This however affected legitimate instances without a way to override the behaviour
      * Users can hide unwanted instances if required
- Amends `SilenceAPFS` Feature
  * No longer separately user configurable and subsumed into the `SupplyAPFS` feature
  * The associated `disable_apfs_mute` configuration token is now removed and ignored if set
- Amends `GOP Graphics` Handling
  * GOP is now provided/replaced on the `ConsoleOut` handle by default when required
  * Hence, the "Opt-In" `provide_console_gop` token is replaced by the "Opt-Out" `disable_set_consolegop`
- Removes `HelpTags` Feature
  * The issue the feature was meant to fix does not actually exist
  * The associated `decline_help_tags` configuration token is now removed and ignored if set
- Renames Configuration Token
  * `decline_apple_fb` to `disable_set_applefb`


0.14.0.AB (03 Oct 2023):
-----------------------
- Adds `HelpScan` Feature
  * Ensures that some typically unwanted loaders are not displayed in the first row
    - Enforces tools only appearing in the second row
    - Always adds program default items for exclusion to user defined ones
  * Enabled by default but can be disabled using a new `decline_help_scan` configuration token
    - The new token sets RefindPlus to follow the upstream implementation
- Fixes `MemTest Tool`
  * The MemTest fallback loader file was not recognised as a MemTest loader